2010-03-26  BVK Chaitanya  <bvk.groups@gmail.com>

	Testcase and the fix for final semicolon on cmdline.

	* tests/grub_script_final_semicolon.in: New testcase.
	* conf/tests.rmk: Rules for the new testcase.
	* script/parser.y: Grammar fix.

2010-03-26  BVK Chaitanya  <bvk@localhost>

	Blank lines testcase for GRUB script.

	* tests/grub_script_blanklines.in: New testcase.
	* conf/tests.rmk: Rules for the new testcase.

2010-03-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't use __FILE__.

	* genmk.rb: Add -DGRUB_FILE to all C targets.
	* fs/reiserfs.c: Replace __FILE__ with GRUB_FILE.
	* include/grub/list.h: Likewise.
	* include/grub/misc.h: Likewise.
	* include/grub/mm.h: Likewise.
	* include/grub/test.h: Likewise.
	* kern/mm.c: Likewise.
	* lib/libgcrypt_wrap/cipher_wrap.h: Likewise.

2010-03-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Sunpc partitions support.

	* conf/common.rmk (grub_probe_SOURCES): Add partmap/sunpc.c.
	(grub_fstest_SOURCES): Likewise.
	(pkglib_MODULES): Add part_sunpc.mod.
	(part_sunpc_mod_SOURCES): New variable.
	(part_sunpc_mod_CFLAGS): Likewise.
	(part_sunpc_mod_LDFLAGS): Likewise.
	* conf/i386-pc.rmk (grub_setup_SOURCES): Add partmap/sunpc.c.
	* partmap/sunpc.c: New file.

2010-03-26  BVK Chaitanya  <bvk@localhost>

	For loop support to GRUB script.

	* include/grub/script_sh.h (grub_script_cmdfor): New struct.
	(grub_script_create_cmdfor): New function prototype.
	(grub_script_execute_cmdfor): New function prototype.
	* script/execute.c (grub_script_execute_cmdfor): New function.
	* script/parser.y (command): New for command.
	(forcmd): New grammar rule.
	* script/script.c (grub_script_create_cmdfor): New function.
	* util/grub-script-check.c (grub_script_execute_cmdfor): New
	function.
	* tests/grub_script_for1.in: New testcase.
	* conf/tests.rmk: Rules for new testcase.

2010-03-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Nested partitions

	* commands/blocklist.c (grub_cmd_blocklist): Don't check whether